[package]
name = "auth-rs"
version = "0.1.0"
authors = ["Mauricio Muratori <maurimura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-session = "0.2.0"
actix-identity = "0.1.0"
serde = "1.0.102"